# IMAX-Sentinel

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  config.toml  pyproject.toml
.github/workflows/: sentinel.yml
data/: sentinel.db
imax_sentinel/: browser_fetch.py  challenge_detection.py  config.py  fetch.py  human_behaviour_simulation.py  logging_config.py  main.py  notify.py  parse.py  store.py
