[project]
name = "imax-sentinel"
version = "0.1.0"
description = "IMAX ticket watcher for Nolan and other selected films"
readme = "README.md"
authors = [
    { name = "sanjeevz3009", email = "sanjeevz1717@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
]

[project.scripts]
imax-sentinel = "imax_sentinel:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
